--- a/src/Tests/PerformanceTestsResultUploader/PerformanceTestsResultUploader.csproj
+++ b/src/Tests/PerformanceTestsResultUploader/PerformanceTestsResultUploader.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="System.CommandLine.Experimental" Version="0.2.0-alpha.19174.3" />
     <PackageReference Include="Microsoft.Extensions.DependencyModel" Version="$(MicrosoftExtensionsDependencyModelVersion)" />
     <PackageReference Include="Microsoft.Azure.Storage.Blob" Version="10.0.3" />
+    <PackageReference Include="Microsoft.DotNet.PlatformAbstractions" Version="$(MicrosoftDotNetPlatformAbstractionsPackageVersion)" />
   </ItemGroup>
 
 </Project>
