Stop using really stale Cli.Utils

--- a/eng/Versions.props
+++ b/eng/Versions.props
@@ -82,9 +82,9 @@
     <MicrosoftNETCoreAppRuntimePackageVersion>$(MicrosoftNETCoreAppRuntimewinx64PackageVersion)</MicrosoftNETCoreAppRuntimePackageVersion>
   </PropertyGroup>
   <PropertyGroup>
-    <MicrosoftDotNetPlatformAbstractionsPackageVersion>2.2.0-preview1-26620-03</MicrosoftDotNetPlatformAbstractionsPackageVersion>
-    <MicrosoftDotNetCliUtilsPackageVersion>2.2.100-refac-20180613-1</MicrosoftDotNetCliUtilsPackageVersion>
-    <XliffTasksPackageVersion>0.2.0-beta-000042</XliffTasksPackageVersion>
+    <!-- Test only dependencies -->
+    <MicrosoftDotNetPlatformAbstractionsPackageVersion>$(MicrosoftNETCoreAppRuntimePackageVersion)</MicrosoftDotNetPlatformAbstractionsPackageVersion>
+    <MicrosoftDotNetCliUtilsPackageVersion>$(MicrosoftDotNetCliRuntimePackageVersion)</MicrosoftDotNetCliUtilsPackageVersion>
   </PropertyGroup>
   <PropertyGroup>
     <UsingToolNetFrameworkReferenceAssemblies>true</UsingToolNetFrameworkReferenceAssemblies>
