Switch to label.N form for pre-release label (#1032)
In order to facilitate better preview sorting, switch to label.N form for the pre-release label.

--- a/eng/Versions.props
+++ b/eng/Versions.props
@@ -21,7 +21,8 @@
   </PropertyGroup>
   <PropertyGroup>
     <VersionPrefix>5.0.100</VersionPrefix>
-    <PreReleaseVersionLabel>alpha1</PreReleaseVersionLabel>
+    <PreReleaseVersionLabel>alpha</PreReleaseVersionLabel>
+    <PreReleaseVersionIteration>1</PreReleaseVersionIteration>
   </PropertyGroup>
   <PropertyGroup>
     <RestoreSources>
