--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -3,19 +3,30 @@ trigger:
 - release/*
 
 variables:
-  _TeamName: Roslyn-Project-System
-  _DotNetArtifactsCategory: Toolset
-  ${{ if eq(variables['System.TeamProject'], 'public') }}:
-    PB_PublishBlobFeedKey:
-    PB_PublishBlobFeedUrl:
-    _DotNetPublishToBlobFeed: false
-    _PublishUsingPipelines: false
-    _PublishType: none
-  ${{ if ne(variables['System.TeamProject'], 'public') }}:
-    PB_PublishBlobFeedUrl: https://dotnetfeed.blob.core.windows.net/dotnet-toolset/index.json
-    _DotNetPublishToBlobFeed: true
-    _PublishUsingPipelines: true
-    _PublishType: blob
+  - name: _TeamName
+    value: Roslyn-Project-System
+  - name: _DotNetArtifactsCategory
+    value: Toolset
+  - ${{ if eq(variables['System.TeamProject'], 'public') }}:
+    - name: PB_PublishBlobFeedKey
+    - name: PB_PublishBlobFeedUrl
+    - name: _DotNetPublishToBlobFeed
+      value: false
+    - name: _PublishUsingPipelines
+      value: false
+    - name: _PublishType
+      value: none
+  - ${{ if ne(variables['System.TeamProject'], 'public') }}:
+    - name: PB_PublishBlobFeedUrl
+      value: https://dotnetfeed.blob.core.windows.net/dotnet-toolset/index.json
+    - name: _DotNetPublishToBlobFeed
+      value: true
+    - name: _PublishUsingPipelines
+      value: true
+    - name: _PublishType
+      value: blob
+  - ${{ if and(ne(variables['System.TeamProject'], 'public'), notin(variables['Build.Reason'], 'PullRequest')) }}:
+    - group: DotNet-CLI-SDLValidation-Params
 
 stages:
 - stage: build
@@ -141,12 +152,12 @@ stages:
       SDLValidationParameters:
         enable: true
         params: ' -SourceToolsList @("policheck","credscan")
-        -TsaInstanceURL "https://devdiv.visualstudio.com/"
-        -TsaProjectName "DEVDIV"
-        -TsaNotificationEmail "$(TsaNotificationEmail)"
-        -TsaCodebaseAdmin "$(TsaCodebaseAdmin)"
-        -TsaBugAreaPath "DevDiv\NET Core"
-        -TsaIterationPath "DevDiv"
+        -TsaInstanceURL $(_TsaInstanceURL)
+        -TsaProjectName $(_TsaProjectName)
+        -TsaNotificationEmail $(_TsaNotificationEmail)
+        -TsaCodebaseAdmin $(_TsaCodebaseAdmin)
+        -TsaBugAreaPath $(_TsaBugAreaPath)
+        -TsaIterationPath $(_TsaIterationPath)
         -TsaRepositoryName "core-sdk"
         -TsaCodebaseName "core-sdk"
         -TsaPublish $True'
